--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -13,8 +13,8 @@
 		<div class="wrapper">
 			<form id="formlogin" class="form-signin">       
 		    	<h2 class="form-signin-heading">Please login</h2>
-		    	<input type="email" class="form-control" name="email" placeholder="Email" required="" autofocus="" />
-		    	<input type="password" class="form-control" name="password" placeholder="Password" required=""/>      
+		    	<input id="email" type="email" class="form-control" name="email" placeholder="Email" required="" autofocus="" />
+		    	<input id="password" type="password" class="form-control" name="password" placeholder="Password" required=""/>      
 		    	<label class="checkbox">
 		      	<input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
 		    	</label>
