--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -1,15 +1,18 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="./css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" href="./css/login.css">
 		<script src="./js/jquery.js"></script> 
-		<script src="./js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<script src="./js/bootstrap.min.js"></script>
 		<script src="./js/login.js"></script>
 	</head>
 	<body>
-		<div id="errolog" class="alert alert-danger">
-		  <strong>Falha na autenticação!</strong> 
+		<div id="errorlog" class="alert alert-danger">
+			<strong>Falha na autenticação!</strong> 
+		</div>
+		<div id="successlog" class="alert alert-success">
+		  <strong>Login realizado com sucesso!</strong> 
 		</div>
 		<div class="wrapper">
 			<form id="formlogin" class="form-signin">       
